--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -12,7 +12,7 @@ sites:
   - name: Personal Blog
     url: https://blog.jonthan.xyz
   - name: QBitTorrent webUI
-    url: https://qbittorrent.local.jonthan.xyz
+    url: https://qbittorrent.jonthan.xyz
  
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
